force-app/main/default/objects/RCObject__c/RCObject__c.object-meta.xml
<CustomObject>
    <label>RCObject</label>
    <nameField>
        <label>RCObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RCObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>