force-app/main/default/objects/RCObject__c/fields/pick2__c.field-meta.xml
<CustomField>
    <fullName>pick2__c</fullName>
    <label>pick2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RCPick1</valueSetName>
    </valueSet>
</CustomField>