force-app/main/default/objects/RCObject__c/recordTypes/RCRT1.recordType-meta.xml
<RecordType>
    <fullName>RCRT1</fullName>
    <active>true</active>
    <description>rc1</description>
    <label>RCRT1</label>
</RecordType>