force-app/main/default/objects/RCObject__c/recordTypes/RCRT2.recordType-meta.xml
<RecordType>
    <fullName>RCRT2</fullName>
    <active>true</active>
    <description>this is RC2</description>
    <label>RCRT2</label>
</RecordType>