force-app/main/default/objects/RCObject__c/recordTypes/RCRT3.recordType-meta.xml
<RecordType>
    <fullName>RCRT3</fullName>
    <active>false</active>
    <label>RCRT3</label>
</RecordType>