force-app/main/default/objects/RCObject__c/validationRules/VR1.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1</fullName>
    <active>true</active>
    <errorConditionFormula>OwnerId  = &apos;123&apos;</errorConditionFormula>
    <errorMessage>No OwenerId found</errorMessage>
</ValidationRule>